[package]
name = "claude-env"
version = "0.1.2"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive", "color"] }
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.31", features = ["serialize", "serde-types"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
uuid = { version = "1.5", features = ["v4", "serde"] }
tabled = "0.15"
tabled_derive = "0.8"
serde_json = "1.0"
